2009-06-19  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Added files to be ignored by git.
	* .gitignore: Ignore svn-wrapper related files + generated
	config file.

2009-06-19  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Removed uncessary fields for resolved momentum and spatial notations.
	* include/dynamicsJRLJapan/DynamicBody.h: 
	Removed the fields (RMC + spatial notations).
	* src/DynamicBody.cpp: 
	Removed the fields from initialization and operator=.

2009-06-09  Nicolas Mansard

	Release 1.15.0 for sot 1.1.0.

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding a new method for optimized code in hrp2dynamics.
	* include/dynamicsJRLJapan/DynamicMultiBody.h: 
	Adding access to inertiaMatrix.
	* src/DynamicMultiBody.cpp: .

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	License is send back to file License.txt.
	* include/dynamicsJRLJapan/Body.h: .
	* include/dynamicsJRLJapan/DynamicBody.h: .
	* include/dynamicsJRLJapan/Hand.h: .
	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h: .
	* include/dynamicsJRLJapan/HumanoidSpecificities.h: .
	* include/dynamicsJRLJapan/Joint.h: .
	* include/dynamicsJRLJapan/MultiBody.h: .
	* include/dynamicsJRLJapan/SpiritVRMLReader.h: .
	* include/dynamicsJRLJapan/fileReader.h: .
	* src/Body.cpp: .
	* src/CMakeLists.txt: .
	* src/DynamicBody.cpp: .
	* src/Hand.cpp: .
	* src/HumanoidDynamicMultiBody.cpp: .
	* src/HumanoidSpecificities.cpp: .
	* src/Joint.cpp: .
	* src/MultiBody.cpp: .
	* src/SpiritVRMLReader.cpp: .
	* src/fileReader.cpp: .

2009-05-08  Florent Lamiraux  <florent@laas.fr>

	Release 1.14.
	* CMakeLists.txt: Upgrade package version and dependencies.

2009-04-30  Olivier Stasse  <olivier.stasse@aist.go.jp>

	[unitTesting] Reinforce T3d compatibility.
	* ChangeLog: .
	* unitTesting/TestCopyJointTreeThroughAbstractInterface.cpp: 
	access compatiable with t3d.
	* unitTesting/TestHumanoidDynamicRobot.cpp: 
	access compatible with t3d.
	* unitTesting/TestHumanoidDynamicRobotglut.cpp: 