@@ -1,3 +1,10 @@
+2009-06-22  Olivier Stasse  <olivier.stasse@aist.go.jp>
+
+	Removed wrong access to RMC fields + InertiaMatrix test..
+	* src/DynamicBody.cpp: Removed access to RMC.
+	* unitTesting/TestHumanoidDynamicRobot.cpp: 
+	Inertia matrix test.
+
 2009-06-19  Olivier Stasse  <olivier.stasse@aist.go.jp>
 
 	Added files to be ignored by git.
